refactor: Map.of()를 Collections.emptyMap()으로 변경